--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href=".\styles\style.css">
   <title>Learning how to learn</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <img 
+          class="logo logo_place_header"
+          src=".\images/logo_place_header.png"
+          alt="Logo"
+      >
+      <h1
+         class="header__title"
+      > Learning How to Learn
+      </h1>
+      <div class="header__subtitle">
+        <h2>The most effective, cutting-edge learning 
+          technique that you can apply to your daily life.
+          <a href="#" class="header__link" 
+          > Learn more 
+          </a> 
+          <!-- (TODO:find arrow symbol) -->
+        </h2>
+      </div>
+      <img 
+          src=".\images\header-image.png"
+          class="header__main-illustartion"
+      >
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
