--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div class="header__subtitle">
         <h2>The most effective, cutting-edge learning 
           technique that you can apply to your daily life.
-          <a href="#" class="header__link" 
+          <span><a href="#" class="header__link" 
           > Learn more 
-          </a> 
+          </a></span> 
           <!-- (TODO:find arrow symbol) -->
         </h2>
       </div>
