--- a/index.html
+++ b/index.html
@@ -62,19 +62,135 @@
         </div>
       </section>
       <section class="digits">
-        <h2 class="section-title ">
-
+        <h2 class="section-title digits__title_space">
+        Facts and figures
         </h2>
-        <h3 class="section-subtitle"></h3>
+        <h3 class="section-subtitle">
+        On learning and the brain
+        </h3>
+        <ul class="table list">
+          <li class="table__cell digits__cell_space">
+             <h4 class="table__heading">86 billion</h4>
+            <p class="table__text">The number of neurons in the human brain</p>
+          </li>
+          <li class="table__cell digits__cell_space">
+            <h4 class="table__heading">73%</h4>
+            <p class="table__text">The percentage of adults in the US who consider themselves lifelong learners
+            </p>
+            <p class="table__text">Pew Research Center</p>
+          </li>
+          <li class="table__cell digits__cell_space">
+            <h4 class="table__heading">1,000 terabytes</h4>
+            <p class="table__text">The information storage capacity of a human</p>
+          </li>
+          <li class="table__cell digits__cell_space">                    <h4 class="table__heading">500 trillion</h4>
+              <p class="table__text">The number of nerve synapses responsible for learning in the average adult human</p>
+          </li>
+          <li class="table__cell digits__cell_space">
+            <h4 class="table__heading">420 million</h4>
+            <p class="table__text">The number of adults under 25 with insufficient education for finding employment</p>
+            <p class="table__text">World Bank, 2017</p>
+          </li>
+          <li class="table__cell digits__cell_space">
+            <h4 class="table__heading">26 years old</h4>
+            <p class="table__text">The age at which Albert Einstein published his groundbreaking paper on special relativity</p>
+          </li>
+          <li class="table__cell digits__cell_space">
+            <h4 class="table__heading">1885</h4>
+            <p class="table__text">Development of the forgetting curve</p>
+          </li>
+          <li class="table__cell digits__cell_space">
+            <h4 class="table__heading">1897</h4>
+            <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning
+            </p>
+          </li>
+        </ul>
       </section>
-
       <section class="feynman">
+        <h2 class="feynman__title">The Feynman Technique</h2>
+        <h3 class="feynman__subtitle">Learn without forgetting</h3>
+        <a href="#" class="feynman__link">More →</a>
+        <img src=".\images\feynman.png" class="feynman__image" alt="A Black and White portrait of Feynman looking to the left with a smile that makes him squint his eyes, slightly. He is  wearing a plaid suit, white shirt and tie. hair pulled back.">
       </section>
-
       <section class="kaufman">
+        <h2 class="section-title section-title__theme_dark">
+          Ten principles of rapid skill acquisition 
+        </h2>
+        <h3 class="section-subtitle section-subtitle__theme_dark">
+          by Josh Kaufman
+        </h3>
+        <ul class="table list table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">1</h4>
+            <p class="table__text table__text_theme_dark">Choose a lovable project</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">2</h4>
+            <p class="table__text table__text_theme_dark">Focus your energy on one skill at a time</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">3</h4>
+            <p class="table__text table__text_theme_dark">Define your target performance level</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">4</h4>
+            <p class="table__text table__text_theme_dark">Deconstruct the skill into sub-skills</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">5</h4>
+            <p class="table__text table__text_theme_dark">Obtain critical tools</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">6</h4>
+            <p class="table__text table__text_theme_dark">Eliminate barriers to practice</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">7</h4>
+            <p class="table__text table__text_theme_dark">Make dedicated time for practice</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">8</h4>
+            <p class="table__text table__text_theme_dark">Create fast feedback loops</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">9</h4>
+            <p class="table__text table__text_theme_dark">Practice by the clock in short bursts</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">10</h4>
+            <p class="table__text table__text_theme_dark">Emphasize quantity and speed</p>
+          </li>
+        </ul>
+        <img class="kaufman__triangle" src=".\images\kaufman-triangle.svg" alt="A big blue triangle, over which Josh Kaufman claims ownership">
       </section>
     </main>
     <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <img class="logo_place_footer">
+          <p class="footer__author">(c) 2021 Your name</p>
+        </div>
+        <div class="footer__column_content_about">
+          <h5 class="column-heading">About Practicum by Yandex</h5>
+          <ul class="footer__list list">
+            <li class="footer__column-link"></li>
+            <li class="footer__column-link"></li>
+            <li class="footer__column-link"></li>
+          </ul>
+        </div>
+        <div class="footer__column_content_social">
+          <h5 class="column-heading">Social media</h5>
+          <ul class="footer__list list">
+            <li class="footer__column-link">
+              <img class="footer__social-icons">
+            </li>
+            <li class="footer__column-link">
+              <img class="footer__social-icons">
+            </li>
+          </ul>
+        </div>
+
+      </div>
 
     </footer>
   </div>
