--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href=".\styles\normalize.css">
-  <link rel="stylesheet" href=".\styles\style.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Learning how to learn</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
     <header class="header">
       <img 
           class="logo logo_place_header"
-          src=".\images/logo_place_header.png"
+          src="./images/logo_place_header.png"
           alt="Logo"
       >
       <h1
@@ -32,7 +32,7 @@
           <!-- (TODO:find arrow symbol) -->
       </h2>
       <img 
-          src=".\images\header-image.png"
+          src="./images/header-image.png"
           class="header__main-illustartion"
           alt="guy in blue jacket, yellow boots, 
               looking to his left upon a hill"
@@ -45,20 +45,21 @@
           <h2 class="two-columns__brief">
           The main problem with education
           </h2>
-          <div class="two-columns__main-text">
+            <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
-              Whether it's at school or university, the one thing no one ever teaches you is how to teach yourself. We often just end up drilling specific exercises and mindlessly memorizing information so that when exam time comes around, we pass the test. But once the test is over, that information has outlived its usefulness, and there's no guarantee that information will be retained. In the end, we're really just learning how to pass our tests.
+                Whether it's at school or university, the one thing no one ever teaches you is how to teach yourself. We often just end up drilling specific exercises and mindlessly memorizing information so that when exam time comes around, we pass the test. But once the test is over, that information has outlived its usefulness, and there's no guarantee that information will be retained. In the end, we're really just learning how to pass our tests.
               </p>
               <p class="two-columns__paragraph">
                 <span 
-                class="two-columns__span-accent">
-                Here's the real question:
+                  class="two-columns__span-accent">
+                  Here's the real question:
                 </span>
               does this approach of repetition and memorization help us truly understand the subject material? The academic consensus nowadays is that it doesn't. In fact, what's more important than any individual topic is knowing how to study, but for some reason, this point is often overlooked. So, what can we do to remedy this?
               </p>
               <p class="two-columns__paragraph">
-              Well, there are various techniques and exercises that can be applied to the educational process to help make it more efficient and engaging. Keep scrolling to uncover some of the secrets of effective learning.  
+                Well, there are various techniques and exercises that can be applied to the educational process to help make it more efficient and engaging. Keep scrolling to uncover some of the secrets of effective learning.  
               </p>
+            </div>
         </div>
       </section>
       <section class="digits">
@@ -110,7 +111,7 @@
         <h2 class="feynman__title">The Feynman Technique</h2>
         <h3 class="feynman__subtitle">Learn without forgetting</h3>
         <a href="#" class="feynman__link">More →</a>
-        <img src=".\images\feynman.png" class="feynman__image" alt="A Black and White portrait of Feynman looking to the left with a smile that makes him squint his eyes, slightly. He is  wearing a plaid suit, white shirt and tie. hair pulled back.">
+        <img src="./images/feynman.png" class="feynman__image" alt="A Black and White portrait of Feynman looking to the left with a smile that makes him squint his eyes, slightly. He is  wearing a plaid suit, white shirt and tie. hair pulled back.">
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title__theme_dark">
@@ -161,37 +162,39 @@
             <p class="table__text table__text_theme_dark">Emphasize quantity and speed</p>
           </li>
         </ul>
-        <img class="kaufman__triangle" src=".\images\kaufman-triangle.svg" alt="A big blue triangle, over which Josh Kaufman claims ownership">
+        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="A big blue triangle, over which Josh Kaufman claims ownership">
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
-          <img class="logo_place_footer">
-          <p class="footer__author">(c) 2021 Your name</p>
+          <img class="logo_place_footer" src="./images/logo_place_footer.png" alt="Logo">
+          <p class="footer__author bright-text">© 2021 Barak Barzilay</p>
         </div>
         <div class="footer__column_content_about">
-          <h5 class="column-heading">About Practicum by Yandex</h5>
+          <h5 class="column-heading bright-text">About Practicum by Yandex</h5>
           <ul class="footer__list list">
-            <li class="footer__column-link"></li>
-            <li class="footer__column-link"></li>
-            <li class="footer__column-link"></li>
+            <li><a href="#" class="footer__column-link bright-text">Home page </a></li>
+            <li><a href="#" class="footer__column-link bright-text">Mission</a></li>
+            <li><a href="#" class="footer__column-link bright-text">Professions</a></li>
           </ul>
         </div>
         <div class="footer__column_content_social">
-          <h5 class="column-heading">Social media</h5>
+          <h5 class="column-heading bright-text">Social media</h5>
           <ul class="footer__list list">
-            <li class="footer__column-link">
-              <img class="footer__social-icons">
+            <li>
+              <a href="#" class="footer__column-link bright-text">
+                <img class="footer__social-icons" src="./images/facebook_white.svg" alt="Facebook icon"> Facebook
+              </a> 
             </li>
-            <li class="footer__column-link">
-              <img class="footer__social-icons">
+            <li class="footer__column-link bright-text">
+              <a href="#" class="footer__column-link bright-text">
+                <img class="footer__social-icons" src="./images/instagram_white.svg" alt="Instagram icon"> Instagram
+              </a>
             </li>
           </ul>
         </div>
-
       </div>
-
     </footer>
   </div>
 </body>
