correction after 1st review

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           class="header__title"
         > Learning How to Learn
         </h1>
-        <h2 
+        <p 
           class="header__subtitle">
           The most effective, cutting-edge learning 
           technique that you can apply to your 
@@ -31,9 +31,9 @@
           <a 
             href="#" 
             class="header__link" 
-          >  Learn more 🡒
+          >  Learn more &rarr;
           </a>
-        </h2>
+        </p>
         <img 
             src="./images/header-image.png"
             class="header__main-illustartion"
@@ -85,18 +85,18 @@
           </div>
         </section>
         <section class="digits">
-          <h2 class="section-title digits__title_space">
+          <h2 class="section-title">
           Facts and figures
           </h2>
           <h3 class="section-subtitle">
           On learning and the brain
           </h3>
-          <ul class="table list">
-            <li class="table__cell digits__cell_space">
+          <ul class="table">
+            <li class="table__cell">
               <h4 class="table__heading">86 billion</h4>
               <p class="table__text">The number of neurons in the human brain</p>
             </li>
-            <li class="table__cell digits__cell_space">
+            <li class="table__cell">
               <h4 class="table__heading">73%</h4>
               <p class="table__text">
                 The percentage of adults in the US who 
@@ -104,21 +104,21 @@
               </p>
               <p class="table__text">Pew Research Center</p>
             </li>
-            <li class="table__cell digits__cell_space">
+            <li class="table__cell">
               <h4 class="table__heading">1,000 terabytes</h4>
               <p class="table__text">
                 The information storage 
                 capacity of a human
               </p>
             </li>
-            <li class="table__cell digits__cell_space">
+            <li class="table__cell">
               <h4 class="table__heading">500 trillion</h4>
               <p class="table__text">
                 The number of nerve synapses 
                 responsible for learning in the average adult human
               </p>
             </li>
-            <li class="table__cell digits__cell_space">
+            <li class="table__cell">
               <h4 class="table__heading">420 million</h4>
               <p class="table__text">
                 The number of adults under 25 
@@ -126,20 +126,20 @@
               </p>
               <p class="table__text">World Bank, 2017</p>
             </li>
-            <li class="table__cell digits__cell_space">
+            <li class="table__cell">
               <h4 class="table__heading">26 years old</h4>
               <p class="table__text">
                 The age at which Albert Einstein 
                 published his groundbreaking paper on special relativity
               </p>
             </li>
-            <li class="table__cell digits__cell_space">
+            <li class="table__cell">
               <h4 class="table__heading">1885</h4>
               <p class="table__text">
                 Development of the forgetting curve
               </p>
             </li>
-            <li class="table__cell digits__cell_space">
+            <li class="table__cell">
               <h4 class="table__heading">1897</h4>
               <p class="table__text">
                 Publication of Ivan Pavlov's research 
@@ -155,7 +155,7 @@
           <h3 class="feynman__subtitle">
             Learn without forgetting
           </h3>
-          <a href="#" class="feynman__link">More →</a>
+          <a href="#" class="feynman__link">More &rarr;</a>
           <img src="./images/feynman.png" 
                class="feynman__image" 
                alt="A Black and White portrait of 
@@ -166,13 +166,13 @@
           >
         </section>
         <section class="kaufman">
-          <h2 class="section-title section-title__theme_dark">
+          <h2 class="section-title section-title_theme_dark">
             Ten principles of rapid skill acquisition 
           </h2>
-          <h3 class="section-subtitle section-subtitle__theme_dark">
+          <h3 class="section-subtitle section-subtitle_theme_dark">
             by Josh Kaufman
           </h3>
-          <ul class="table list table_theme_dark">
+          <ul class="table table_theme_dark">
             <li class="table__cell table__cell_theme_dark">
               <h4 class="table__heading table__heading_theme_dark">1</h4>
               <p class="table__text table__text_theme_dark">
@@ -232,46 +232,42 @@
               </p>
             </li>
           </ul>
-          <img class="kaufman__triangle" 
-               src="./images/kaufman-triangle.svg" 
-               alt="A big blue triangle, over which 
-               Josh Kaufman claims ownership"
-          >
+          <div class="kaufman__triangle"></div>
         </section>
       </main>
       <footer class="footer">
         <div class="footer__columns">
-          <div class="footer__column_content_copyright">
+          <div class="footer__column footer__column_content_copyright">
             <img class="logo_place_footer logo" 
                  src="./images/logo_place_footer.png" alt="Logo">
-            <p class="footer__author bright-text">
+            <p class="footer__author">
               © 2021 Barak Barzilay
             </p>
           </div>
-          <div class="footer__column_content_about">
-            <h5 class="column-heading bright-text">About Practicum by Yandex</h5>
-            <ul class="footer__list list">
+          <nav class="footer__column footer__column_content_about">
+            <h5 class="footer__column-heading">About Practicum by Yandex</h5>
+            <ul class="footer__list">
               <li><a href="#" 
-                     class="footer__column-link bright-text">Home page</a></li>
+                     class="footer__column-link">Home page</a></li>
               <li><a href="#" 
-                     class="footer__column-link bright-text">Mission</a></li>
+                     class="footer__column-link">Mission</a></li>
               <li><a href="#" 
-                     class="footer__column-link bright-text">Professions</a></li>
+                     class="footer__column-link">Professions</a></li>
             </ul>
-          </div>
-          <div class="footer__column_content_social">
-            <h5 class="column-heading bright-text">Social media</h5>
-            <ul class="footer__list list">
+          </nav>
+          <nav class="footer__column footer__column_content_social">
+            <h5 class="footer__column-heading">Social media</h5>
+            <ul class="footer__list">
               <li>
-                <a href="#" class="footer__column-link bright-text">
+                <a href="#" class="footer__column-link">
                   <img class="footer__social-icons" 
                        src="./images/facebook_white.svg" 
                        alt="Facebook icon"
                   >Facebook
                 </a> 
               </li>
-              <li class="footer__column-link bright-text">
-                <a href="#" class="footer__column-link bright-text">
+              <li>
+                <a href="#" class="footer__column-link">
                   <img class="footer__social-icons" 
                        src="./images/instagram_white.svg" 
                        alt="Instagram icon"
@@ -279,7 +275,7 @@
                 </a>
               </li>
             </ul>
-          </div>
+          </nav>
         </div>
       </footer>
     </div>
