--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
   <body>
     <div class="page">
       <header class="header">
-        <img 
-            class="logo logo_place_header"
-            src="./images/logo_place_header.png"
-            alt="Logo"
-        >
+        <div class="logo logo_place_header"></div>
         <h1
           class="header__title"
         > Learning How to Learn
