--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
       content="width=device-width, 
           initial-scale=1.0"
     />
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
     <title>Learning how to learn</title>
   </head>
   <body>
@@ -19,7 +18,7 @@
         <p class="header__subtitle">
           The most effective, cutting-edge learning technique that you can apply
           to your daily life.
-          <a href="#" class="header__link">Learn more &rarr;</a>
+          <a href="#" class="header__link link-transparency">Learn more &rarr;</a>
         </p>
         <img
           src="./images/header-image.png"
@@ -27,7 +26,7 @@
           alt="guy in blue jacket, yellow boots, 
             looking to his left upon a hill"
         />
-        <div class="header__square-pic"></div>
+        <div class="header__square-pic object-rotation"></div>
       </header>
       <main class="content">
         <section class="description">
@@ -63,6 +62,126 @@
               </p>
             </div>
           </div>
+        </section>
+        <section class="techniques">
+          <h2 class="section-title">Learning Techniques</h2>
+          <h3 class="section-subtitle">Five Strategies from Barbara Oakley</h3>
+          <div class="cards">
+            <div class="cards__item">
+              <img
+                src="./images/cards-attention.png"
+                alt="zoom on 2 palms holding a book that speaks of changing the way you think"
+                class="cards__image"
+              />
+              <h4 class="cards__title">Two Ways of Thinking</h4>
+              <p class="cards__description">
+                Deep understanding comes from being able to toggle back and forth
+                between focused and diffused thinking.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img
+                src="./images/cards-recall.png"
+                alt="roman statue"
+                class="cards__image"
+              >
+              <h4 class="cards__title">Recall</h4>
+              <p class="cards__description">
+                Improving your ability to remember key bits of information helps
+                to connect different parts of the brain.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img
+                src="./images/cards-interleaving.png"
+                alt="a dome of some kind with people in it"
+                class="cards__image"
+              />
+              <h4 class="cards__title">Interleaving</h4>
+              <p class="cards__description">
+                When you learn multiple skills at the same time, they reinforce
+                each other.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img
+                src="./images/cards-question.png"
+                alt="the inside of a peculiar architechtural structure"
+                class="cards__image"
+              />
+              <h4 class="cards__title">Questions</h4>
+              <p class="cards__description">
+                When listening to your teacher, think up a good question,
+                something that you're really itching to know.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img
+                src="./images/cards-competence.png"
+                alt="hand holding books"
+                class="cards__image"
+              />
+              <h4 class="cards__title">Illusion of Competence</h4>
+              <p class="cards__description">
+                Test yourself, write it down, tell other people, and repeat the
+                process in different settings. Only then can you be truly certain
+                you've understood something.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="video">
+          <h2 class="section-title">TED talks</h2>
+          <h3 class="section-subtitle">For lovers of procrastination</h3>
+          <div class="video__iframes">
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/5MgBikgcWnY"
+              title="YouTube video player"
+              allow="clipboard-write; encrypted-media; gyroscope;"
+              allowfullscreen></iframe>
+            <iframe
+              class="video__iframe"
+              src="https://www.youtube.com/embed/arj7oStGLkU"
+              title="YouTube video player"
+              allow="clipboard-write; encrypted-media; gyroscope;"
+              allowfullscreen></iframe>
+          </div>
+        </section>
+        <section class="oakley">
+          <div class="two-columns">
+            <h2 class="two-columns__brief">Barbara Oakley’s story.</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
+                Math didn't come naturally to Barbara in childhood. She thought
+                of herself as more of a humanities person, and not a brilliant
+                one at that. With an eye to becoming a linguist, after school
+                she enlisted in the army, who sent her to learn Russian. After
+                several years of service, during which she rose to the rank of
+                Captain, Barbara left the army and decided to study engineering.
+                In was during this time that she developed her learning
+                methodology as she was forced to reprogram her brain for a
+                different kind of learning. It turns out that when something
+                doesn't come naturally to you, having to work hard to gain the
+                knowledge that other people may get at first glance gives you a
+                deeper, more comprehensive understanding of the subject matter.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="feynman">
+          <h2 class="feynman__title">The Feynman Technique</h2>
+          <h3 class="feynman__subtitle">Learn without forgetting</h3>
+          <a href="#" class="feynman__link link-transparency">More &rarr;</a>
+          <img
+            src="../images/feynman.png"
+            class="feynman__image"
+            alt="A Black and White portrait of 
+               Feynman looking to the left with a smile 
+               that makes him squint his eyes, slightly. 
+               He is  wearing a plaid suit, white shirt and tie. 
+               hair pulled back."
+          />
         </section>
         <section class="digits">
           <h2 class="section-title">Facts and figures</h2>
@@ -122,19 +241,28 @@
             </li>
           </ul>
         </section>
-        <section class="feynman">
-          <h2 class="feynman__title">The Feynman Technique</h2>
-          <h3 class="feynman__subtitle">Learn without forgetting</h3>
-          <a href="#" class="feynman__link">More &rarr;</a>
-          <img
-            src="./images/feynman.png"
-            class="feynman__image"
-            alt="A Black and White portrait of 
-               Feynman looking to the left with a smile 
-               that makes him squint his eyes, slightly. 
-               He is  wearing a plaid suit, white shirt and tie. 
-               hair pulled back."
-          />
+        <section class="khan">
+          <article class="khan__container">
+            <h2 class="khan__author">Salman Khan</h2>
+            <h3 class="khan__title">The One World Schoolhouse</h3>
+            <p class="khan__quote">
+              Sal Khan's passion and innovation is transforming learning for
+              millions of students worldwide. The One World Schoolhouse is a
+              must-read for all who are committed to improving education so
+              students everywhere can gain the skills and knowledge to be
+              successful in school, careers and life.
+            </p>
+            <h2 class="khan__quote-author">George Lucas</h2>
+            <h3 class="khan__quote-author-subline">Filmmaker</h3>
+            <div class="khan__book-container">
+              <img
+                src="./images/khan-book-2.png"
+                alt="Sal Khan's book, titled: The ONE WORLD SCHOOL HOUSE"
+                class="khan__book-pic"
+              />
+              <a href="#" class="khan__buy-link link-transparency">Buy Book &rarr;</a>
+            </div>
+          </article>
         </section>
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">
@@ -205,7 +333,17 @@
               </p>
             </li>
           </ul>
-          <div class="kaufman__triangle"></div>
+          <div class="kaufman__triangle object-rotation"></div>
+        </section>
+        <section class="resources">
+          <h2 class="section-title">Useful resources</h2>
+          <h3 class="section-subtitle">Further materials on learning techniques and hacks.</h3>
+          <div class="resources__logo-zone">
+            <a href="#"><img src="./images/resources-tedED.png" alt="TEDEd Logo" class="resources__logo link-transparency"></a>
+            <a href="#"><img src="./images/resources-Medium.png" alt="Medium Logo" class="resources__logo link-transparency"></a>
+            <a href="#"><img src="./images/resources-dezeen.png" alt="de zeen Logo" class="resources__logo link-transparency"></a>
+            <a href="#"><img src="./images/resources-goodreads.png" alt="goodreads Logo" class="resources__logo link-transparency"></a>
+          </div>
         </section>
       </main>
       <footer class="footer">
@@ -221,30 +359,30 @@
           <nav class="footer__column footer__column_content_about">
             <h5 class="footer__column-heading">About Practicum by Yandex</h5>
             <ul class="footer__list">
-              <li><a href="#" class="footer__column-link">Home page</a></li>
-              <li><a href="#" class="footer__column-link">Mission</a></li>
-              <li><a href="#" class="footer__column-link">Professions</a></li>
+              <li><a href="#" class="footer__column-link link-transparency">Home page</a></li>
+              <li><a href="#" class="footer__column-link link-transparency">Mission</a></li>
+              <li><a href="#" class="footer__column-link link-transparency">Professions</a></li>
             </ul>
           </nav>
           <nav class="footer__column footer__column_content_social">
             <h5 class="footer__column-heading">Social media</h5>
             <ul class="footer__list">
               <li>
-                <a href="#" class="footer__column-link">
+                <a href="#" class="footer__column-link link-transparency">
                   <img
                     class="footer__social-icons"
                     src="./images/facebook_white.svg"
                     alt="Facebook icon"
-                  />Facebook
+                  >Facebook
                 </a>
               </li>
               <li>
-                <a href="#" class="footer__column-link">
+                <a href="#" class="footer__column-link link-transparency">
                   <img
                     class="footer__social-icons"
                     src="./images/instagram_white.svg"
                     alt="Instagram icon"
-                  />Instagram
+                  >Instagram
                 </a>
               </li>
             </ul>
