--- a/index.html
+++ b/index.html
@@ -65,74 +65,74 @@
         </section>
         <section class="techniques">
           <h2 class="section-title">Learning Techniques</h2>
-          <h3 class="section-subtitle">Five Strategies from Barbara Oakley</h3>
-          <div class="cards">
-            <div class="cards__item">
+          <p class="section-subtitle">Five Strategies from Barbara Oakley</p>
+          <ul class="cards">
+            <li class="cards__item">
               <img
                 src="./images/cards-attention.png"
                 alt="zoom on 2 palms holding a book that speaks of changing the way you think"
                 class="cards__image"
               />
-              <h4 class="cards__title">Two Ways of Thinking</h4>
+              <p class="cards__title">Two Ways of Thinking</p>
               <p class="cards__description">
                 Deep understanding comes from being able to toggle back and forth
                 between focused and diffused thinking.
               </p>
-            </div>
-            <div class="cards__item">
+            </li>
+            <li class="cards__item">
               <img
                 src="./images/cards-recall.png"
                 alt="roman statue"
                 class="cards__image"
               >
-              <h4 class="cards__title">Recall</h4>
+              <p class="cards__title">Recall</p>
               <p class="cards__description">
                 Improving your ability to remember key bits of information helps
                 to connect different parts of the brain.
               </p>
-            </div>
-            <div class="cards__item">
+            </li>
+            <li class="cards__item">
               <img
                 src="./images/cards-interleaving.png"
                 alt="a dome of some kind with people in it"
                 class="cards__image"
               />
-              <h4 class="cards__title">Interleaving</h4>
+              <p class="cards__title">Interleaving</p>
               <p class="cards__description">
                 When you learn multiple skills at the same time, they reinforce
                 each other.
               </p>
-            </div>
-            <div class="cards__item">
+            </li>
+            <li class="cards__item">
               <img
                 src="./images/cards-question.png"
                 alt="the inside of a peculiar architechtural structure"
                 class="cards__image"
               />
-              <h4 class="cards__title">Questions</h4>
+              <p class="cards__title">Questions</p>
               <p class="cards__description">
                 When listening to your teacher, think up a good question,
                 something that you're really itching to know.
               </p>
-            </div>
-            <div class="cards__item">
+            </li>
+            <li class="cards__item">
               <img
                 src="./images/cards-competence.png"
                 alt="hand holding books"
                 class="cards__image"
               />
-              <h4 class="cards__title">Illusion of Competence</h4>
+              <p class="cards__title">Illusion of Competence</p>
               <p class="cards__description">
                 Test yourself, write it down, tell other people, and repeat the
                 process in different settings. Only then can you be truly certain
                 you've understood something.
               </p>
-            </div>
-          </div>
+            </li>
+          </ul>
         </section>
         <section class="video">
           <h2 class="section-title">TED talks</h2>
-          <h3 class="section-subtitle">For lovers of procrastination</h3>
+          <p class="section-subtitle">For lovers of procrastination</p>
           <div class="video__iframes">
             <iframe
               class="video__iframe"
@@ -171,10 +171,10 @@
         </section>
         <section class="feynman">
           <h2 class="feynman__title">The Feynman Technique</h2>
-          <h3 class="feynman__subtitle">Learn without forgetting</h3>
+          <p class="feynman__subtitle">Learn without forgetting</p>
           <a href="#" class="feynman__link link-transparency">More &rarr;</a>
           <img
-            src="../images/feynman.png"
+            src="./images/feynman.png"
             class="feynman__image"
             alt="A Black and White portrait of 
                Feynman looking to the left with a smile 
@@ -185,16 +185,16 @@
         </section>
         <section class="digits">
           <h2 class="section-title">Facts and figures</h2>
-          <h3 class="section-subtitle">On learning and the brain</h3>
+          <p class="section-subtitle">On learning and the brain</p>
           <ul class="table">
             <li class="table__cell">
-              <h4 class="table__heading">86 billion</h4>
+              <p class="table__heading">86 billion</p>
               <p class="table__text">
                 The number of neurons in the human brain
               </p>
             </li>
             <li class="table__cell">
-              <h4 class="table__heading">73%</h4>
+              <p class="table__heading">73%</p>
               <p class="table__text">
                 The percentage of adults in the US who consider themselves
                 lifelong learners
@@ -202,20 +202,20 @@
               <p class="table__text">Pew Research Center</p>
             </li>
             <li class="table__cell">
-              <h4 class="table__heading">1,000 terabytes</h4>
+              <p class="table__heading">1,000 terabytes</p>
               <p class="table__text">
                 The information storage capacity of a human
               </p>
             </li>
             <li class="table__cell">
-              <h4 class="table__heading">500 trillion</h4>
+              <p class="table__heading">500 trillion</p>
               <p class="table__text">
                 The number of nerve synapses responsible for learning in the
                 average adult human
               </p>
             </li>
             <li class="table__cell">
-              <h4 class="table__heading">420 million</h4>
+              <p class="table__heading">420 million</p>
               <p class="table__text">
                 The number of adults under 25 with insufficient education for
                 finding employment
@@ -223,18 +223,18 @@
               <p class="table__text">World Bank, 2017</p>
             </li>
             <li class="table__cell">
-              <h4 class="table__heading">26 years old</h4>
+              <p class="table__heading">26 years old</p>
               <p class="table__text">
                 The age at which Albert Einstein published his groundbreaking
                 paper on special relativity
               </p>
             </li>
             <li class="table__cell">
-              <h4 class="table__heading">1885</h4>
+              <p class="table__heading">1885</p>
               <p class="table__text">Development of the forgetting curve</p>
             </li>
             <li class="table__cell">
-              <h4 class="table__heading">1897</h4>
+              <p class="table__heading">1897</p>
               <p class="table__text">
                 Publication of Ivan Pavlov's research on classical conditioning
               </p>
@@ -244,7 +244,7 @@
         <section class="khan">
           <article class="khan__container">
             <h2 class="khan__author">Salman Khan</h2>
-            <h3 class="khan__title">The One World Schoolhouse</h3>
+            <p class="khan__title">The One World Schoolhouse</p>
             <p class="khan__quote">
               Sal Khan's passion and innovation is transforming learning for
               millions of students worldwide. The One World Schoolhouse is a
@@ -252,8 +252,8 @@
               students everywhere can gain the skills and knowledge to be
               successful in school, careers and life.
             </p>
-            <h2 class="khan__quote-author">George Lucas</h2>
-            <h3 class="khan__quote-author-subline">Filmmaker</h3>
+            <p class="khan__quote-author">George Lucas</p>
+            <p class="khan__quote-author-subline">Filmmaker</p>
             <div class="khan__book-container">
               <img
                 src="./images/khan-book-2.png"
@@ -268,66 +268,66 @@
           <h2 class="section-title section-title_theme_dark">
             Ten principles of rapid skill acquisition
           </h2>
-          <h3 class="section-subtitle section-subtitle_theme_dark">
+          <p class="section-subtitle section-subtitle_theme_dark">
             by Josh Kaufman
-          </h3>
+          </p>
           <ul class="table table_theme_dark">
             <li class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">1</h4>
+              <p class="table__heading table__heading_theme_dark">1</p>
               <p class="table__text table__text_theme_dark">
                 Choose a lovable project
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">2</h4>
+              <p class="table__heading table__heading_theme_dark">2</p>
               <p class="table__text table__text_theme_dark">
                 Focus your energy on one skill at a time
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">3</h4>
+              <p class="table__heading table__heading_theme_dark">3</p>
               <p class="table__text table__text_theme_dark">
                 Define your target performance level
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">4</h4>
+              <p class="table__heading table__heading_theme_dark">4</p>
               <p class="table__text table__text_theme_dark">
                 Deconstruct the skill into sub-skills
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">5</h4>
+              <p class="table__heading table__heading_theme_dark">5</p>
               <p class="table__text table__text_theme_dark">
                 Obtain critical tools
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">6</h4>
+              <p class="table__heading table__heading_theme_dark">6</p>
               <p class="table__text table__text_theme_dark">
                 Eliminate barriers to practice
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">7</h4>
+              <p class="table__heading table__heading_theme_dark">7</p>
               <p class="table__text table__text_theme_dark">
                 Make dedicated time for practice
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">8</h4>
+              <p class="table__heading table__heading_theme_dark">8</p>
               <p class="table__text table__text_theme_dark">
                 Create fast feedback loops
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">9</h4>
+              <p class="table__heading table__heading_theme_dark">9</p>
               <p class="table__text table__text_theme_dark">
                 Practice by the clock in short bursts
               </p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">10</h4>
+              <p class="table__heading table__heading_theme_dark">10</p>
               <p class="table__text table__text_theme_dark">
                 Emphasize quantity and speed
               </p>
@@ -337,7 +337,7 @@
         </section>
         <section class="resources">
           <h2 class="section-title">Useful resources</h2>
-          <h3 class="section-subtitle">Further materials on learning techniques and hacks.</h3>
+          <p class="section-subtitle">Further materials on learning techniques and hacks.</p>
           <div class="resources__logo-zone">
             <a href="#"><img src="./images/resources-tedED.png" alt="TEDEd Logo" class="resources__logo link-transparency"></a>
             <a href="#"><img src="./images/resources-Medium.png" alt="Medium Logo" class="resources__logo link-transparency"></a>
